--- a/styles/global.css
+++ b/styles/global.css
@@ -33,7 +33,13 @@
   --fs-base: 1rem;
   --fs-lg: 1.25rem;
   --fs-xl: 1.5rem;
-  --fs-2xl: 2.5rem;
+  --fs-2xl: 2.5rem; 
+
+    --py-base: 1rem; /* padding eixo Y */
+    --py-lg: 1.5rem;
+    --py-xl: 3rem;
+
+    --px-lg: 1.5rem; /*padding no eixo X */
 }
 
 html {
@@ -81,6 +87,14 @@ ul[role="list"] { /* o comando ROLE faz aparecer como lista, evita erro de naveg
     --fs-lg: 2rem;
     --fs-xl: 3rem;
     --fs-2xl: 4rem;
-    }  
+
+    --px-lg: 2rem; /*padding no eixo X */
+
+    --py-base: 1.5rem; /* padding eixo Y */
+    --py-lg: 2.5rem;
+    --py-xl: 5rem;
+
+
+     }  
   }
 
