--- a/styles/global.css
+++ b/styles/global.css
@@ -78,6 +78,17 @@ a {
   color: inherit;
 }
 
+a:hover {
+  background: linear-gradient(
+    90deg,
+    var(--brand-color-secondary) 0%,
+    var(--brand-color-primary) 100%
+  );
+   
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+
 ul[role="list"] { /* o comando ROLE faz aparecer como lista, evita erro de navegadores para a "bolinha" de listas*/
   list-style: none;
 }
