--- a/styles/global.css
+++ b/styles/global.css
@@ -88,6 +88,7 @@ a:hover {
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
+}
 
 ul[role="list"] { /* o comando ROLE faz aparecer como lista, evita erro de navegadores para a "bolinha" de listas*/
   list-style: none;
