--- a/styles/global.css
+++ b/styles/global.css
@@ -94,6 +94,11 @@ ul[role="list"] { /* o comando ROLE faz aparecer como lista, evita erro de naveg
   list-style: none;
 }
 
+img {
+  max-width: 100%;
+  display: inline-block;
+}
+
   @media (width >=80em) { /* configurações mudam para medidas desktop */
     :root {
     --fs-lg: 2rem;
