--- a/styles/global.css
+++ b/styles/global.css
@@ -24,7 +24,7 @@
   --brand-color-primary: #f7b733;
   --brand-color-secondary: #fc4a1a;
 
-  --ff-sans: 'nter', system-ui, sans-serif;
+  --ff-sans: 'Inter', system-ui, sans-serif;
   --fw-base: 400;
   --fw-md: 500;
   --fw-bold: 800;
@@ -103,12 +103,11 @@ img {
     :root {
     --fs-lg: 2rem;
     --fs-xl: 3rem;
-    --fs-2xl: 4rem;
-
-    --px-lg: 2rem; /*padding no eixo X */
+    --fs-2xl: 4rem;    
 
     --py-base: 1.5rem; /* padding eixo Y */
     --py-lg: 2.5rem;
     --py-xl: 5rem;
+    --px-lg: 2rem; /*padding no eixo X */
      }  
   }
