--- a/styles/utility.css
+++ b/styles/utility.css
@@ -7,18 +7,17 @@
 }
 
 .py-xl {
-  padding-inline:var(--py-xl);  
+  padding-block:var(--py-xl);  
 }
 
 .px-lg {
-  padding-block:var(--px-lg);  
+  padding-inline:var(--px-lg);  
 }
 
 .container {
   --max-width: 375px;
   width: min(var(--max-width), 100% - var(--px-lg) * 2);
-  margin-inline: auto; 
-
+ margin-inline: auto;
 }
 
 .desktop-only {
